# alph-e

./: .gitignore  CHANGES.md  CLAUDE.md  PROGRESS.md  README.md  Taskfile.yml
.claude/: settings.json
agent/: Dockerfile  README.md  manifests.yaml  pyproject.toml
agent-infra/: README.md
agent/src/agent/: __init__.py  __main__.py  cli.py
agent/src/agent/evidence/: __init__.py  client.py  errors.py
agent/src/agent/evidence/migrations/: 0001_initial.sql
agent/src/agent/intake/: __init__.py  linear.py  slack.py  webhook.py
agent/src/agent/llm/: __init__.py  client.py  errors.py  observability.py  settings.py  structured.py
agent/src/agent/orchestrator/: __init__.py  checkpoint.py  graph.py  routing.py  run.py
agent/src/agent/orchestrator/coordinator/: __init__.py  escalation.py  exec.py  preflight.py
agent/src/agent/orchestrator/dev/: __init__.py  diff_validator.py
agent/src/agent/orchestrator/dispatch/: __init__.py  cache.py  http.py  registry.py
agent/src/agent/orchestrator/nodes/: __init__.py  _models.py  collectors.py  coordinator.py  dev.py  intake.py  investigator.py  planner.py  reviewer.py  verifier.py
agent/src/agent/orchestrator/reviewer/: __init__.py  policy.py
agent/src/agent/orchestrator/verifier/: __init__.py  checks.py
agent/src/agent/prompts/: __init__.py  coordinator.md  dev.md  investigator.md  loader.py  planner.md  reviewer.md  system.md  verifier.md
agent/src/agent/schemas/: __init__.py  collector.py  escalation.py  evidence.py  incident.py  remediation.py  verifier.py
agent/src/agent/security/: __init__.py  action_intent.py
agent/tests/fixtures/incidents/: oom-leaky-service.json
agent/tests/integration/: test_checkpoint.py  test_e2e_oom_alert.py  test_evidence_client.py
agent/tests/unit/: test_action_intent.py  test_collectors_dispatch.py  test_coordinator_node.py  test_dev_node.py  test_graph_compile.py  test_intake_webhook.py  test_investigator_node.py  test_llm_client.py  test_llm_observability.py  test_planner_node.py  test_prompt_loader.py  test_reviewer_policy.py  test_routing.py  test_schemas_roundtrip.py  test_structured_output.py  test_verifier_node.py
backlog/: README.md  WI-001-schemas-state-and-contracts.yaml  WI-002-infra-docker-compose.yaml  WI-003-evidence-store-client.yaml  WI-004-go-collector-contract.yaml  WI-005-prom-collector.yaml  WI-006-loki-collector.yaml  WI-007-kube-collector.yaml  WI-008-intake-webhook.yaml  WI-009-orchestrator-graph.yaml  WI-010-agent-investigator.yaml  WI-011-agent-planner.yaml  WI-012-agent-coordinator.yaml  WI-013-eval-seed-corpus.yaml  WI-014-monitoring-alertmanager-route.yaml  WI-015-docs-update.yaml
cluster/: k3d-config.yaml
collectors/: .golangci.yml  Dockerfile  (+5 more)
(+95 files in other folders)
